# Hermes-Workflows

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
config/: mcp_mount.yaml
docs/: PRD.md  architecture.md  mcp_mount_spec.md
docs/proposals/consumed/: H1H2-Unblock.md  H3-Unblock.md  H6-DeepSeek-Prompt-Hardening-Design-Rationale.md  H6-DeepSeek-Prompt-Hardening-Proposal.md
hermes_cli/: __init__.py  cli.py  prompt_validator.py  validator.py
projects/: sxmu_mdd_digital_twin.yaml
templates/: eda_pipeline.yaml  hermes_arc_mcp_test.yaml  hermes_mcp_test.yaml  ml_experiment.yaml
